1.2.4 to 1.2.5
----------------------------------------------------------------------
- Added AirDefense events and updated Symbol events.
- Removed the first two varbinds from an SNMP v2 Trap. Bug 733
- Fixed a number of documentation mistakes pointed out by Austin Tuan.
  Thank you very much, Austin!  Bug 1303.
- Fixes to build.xml to make it easier to specify compiler options for
  explicitly setting the target architecture for the JNI code and the
  PostgreSQL module (build.jni.compiler.arg and build.postgresql.compiler.arg,
  respectively).  Thanks to Jonathan Sartin who submitted a patch.  Bug 1331.
- Fix for building on FreeBSD.  Should now be able to do it by creating
  a build.properties file (see the release notes for details).  Thanks
  to Dennis Berger and Brent Verner for supplying patches.  Bug 1315.
- Fix some small bugs in JavaMailer.  Fixed the default recipient address
  by placing square brackets around the IP address to make it a valid
  domain-literal per RFC 2822.  Also fix a logging bug where the subject
  was logged twice instead of logging the subject and the message contents.
- Performance enhancement for the Scheduled outages editing page. Bug 1340.
  Thanks, Craig M.!

1.2.3 to 1.2.4
----------------------------------------------------------------------
- Fixed a problem with acknowledging events. Bug 1290
- Added the ability to use a URL in the HTTP and HTTPS Monitors.
  Bug 848.
- Colored the background of notification IDs to match the severity
  of the event that triggered the notice. Bug 1262. Thx Eugene
- Display notification totals for both the logged in user and everyone
  else. Bug 1257. Thx Bill.
- Made a change to prevent duplicate "Update SNMP" links.
  Bug 1256. Thx Bill.
- Modified the HttpPlugin to handle replies with a newline.
  Bug 1214. Thx Tobey
- Added the ability to include %descr% tags in notifications
  that reflect the description of the event that caused them.
  Bug 1183. Thx Vincent.