@@ -1,0 +1,466 @@
+<events>
+<!-- Start of auto generated data from MIB: NETSCREEN-TRAP-MIB -->
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>100</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapHw</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapHw</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that some kind of hardware problem has occured.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapHw trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>200</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapFw</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapFw</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that some kind of firewall functions has been triggered.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapFw trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>300</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapSw</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapSw</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that some kind of software problem has occured.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapSw trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>400</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapTrf</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapTrf</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that some kind of traffic conditions has been triggered.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapTrf trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>500</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapVpn</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapVpn</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that VPN tunnel status has occured.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapVpn trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<event>
+	<mask>
+		<maskelement>
+			<mename>id</mename>
+			<mevalue>.1.3.6.1.4.1.3224</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>generic</mename>
+			<mevalue>6</mevalue>
+		</maskelement>
+		<maskelement>
+			<mename>specific</mename>
+			<mevalue>600</mevalue>
+		</maskelement>
+	</mask>
+	<uei>uei.opennms.org/vendor/netscreen/traps/netscreenTrapNsrp</uei>
+	<event-label>NETSCREEN-TRAP-MIB defined trap event: netscreenTrapNsrp</event-label>
+	<descr>
+&lt;p&gt;This trap indicates that NSRP status has occured.&lt;/p&gt;&lt;table&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+		user-auth-fail(3)
+		winnuke(4)
+		syn-attack(5)
+		tear-drop(6)
+		ping-death(7)
+		ip-spoofing(8)
+		ip-src-route(9)
+		land(10)
+		icmp-flood(11)
+		udp-flood(12)
+		illegal-cms-svr(13)
+		url-block-srv(14)
+		high-availibility(15)
+		port-scan(16)
+		addr-sweep(17)
+		policy-deny(18)
+		device-dead(19)
+		low-memory(20)
+		dns-srv-down(21)
+		generic-HW-fail(22)
+		lb-srv-down(23)
+		log-full(24)
+		x509(25)
+		vpn-ike(26)
+		admin(27)
+		sme(28)
+		dhcp(29)
+		cpu-usage-high(30)
+		vpn-tunnel-up(40)
+		vpn-tunnel-down(41)
+		nsrp-rto-up(60)
+		nsrp-rto-down(61)
+		nsrp-trackip-success(62)
+		nsrp-trackip-failed(63)
+		nsrp-trackip-failover(64)
+		nsrp-vsd-init(70)
+		nsrp-vsd-master(71)
+		nsrp-vsd-pbackup(72)
+		nsrp-vsd-backup(73)
+		nsrp-vsd-ineligible(74)
+		link-statechange(1000)
+	&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+	&lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+	netscreenTrapDesc&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+	%parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+	</descr>
+		<logmsg dest='logndisplay'>&lt;p&gt;
+			netscreenTrapNsrp trap received 
+			netscreenTrapType=%parm[#1]% 
+			netscreenTrapDesc=%parm[#2]%&lt;/p&gt;
+		</logmsg>
+	<severity>Indeterminate</severity>
+</event>
+<!-- End of auto generated data from MIB: NETSCREEN-TRAP-MIB -->
+</events>
